@@ -1,3 +1,6 @@
+2013-06-28  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/Changer/multi.pm: Keep a current_slot by config.
+
 2013-06-27  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Changer/rait.pm: Fix perl warning.
 
